kustomize/components/postgres/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-database
  labels:
    quay-component: postgres
  annotations:
    quay-component: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      quay-component: postgres
  template:
    metadata:
      labels:
        quay-component: postgres
    spec:
      terminationGraceperiodSeconds: 600
      serviceAccountName: quay-database
      securityContext:
        fsGroup: 2000
      volumes:
        - name: postgres-conf-sample
          configMap:
            name: postgres-conf-sample
        - name: postgres-bootstrap
          secret:
            secretName: postgres-bootstrap
        - name: postgres-data
          persistentVolumeClaim:
            claimName: quay-postgres-13
      containers:
        - name: postgres
          image: quay.io/sclorg/postgresql-13-c9s:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: postgres-conf-sample
              mountPath: /usr/share/pgsql/postgresql.conf.sample
              subPath: postgresql.conf.sample
            - name: postgres-data
              mountPath: /var/lib/pgsql/data
            - name: postgres-bootstrap
              mountPath: /usr/share/container-scripts/postgresql/start/create-extensions.sh
              subPath: create-extensions.sh
              readOnly: true
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
