kustomize/components/postgres/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quay-database
  labels:
    quay-component: postgres
  annotations:
    component: "postgres"
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
      name: postgres
      targetPort: 5432
  selector:
    quay-component: postgres
