kustomize/components/postgres/postgres.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow-access-only-from-quay-and-upgrade
  labels:
    quay-component: postgres
  annotations:
    quay-component: postgres
    quay-operator/network-policy: restrictive
    quay-operator/network-policy-reason: "Allow database access only to Quay pods and the Quay upgrade job"
spec:
  podSelector:
    matchLabels:
      quay-component: postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          quay-component: quay-app
    - podSelector:
        matchLabels:
          quay-component: quay-app-upgrade
    - podSelector:
        matchLabels:
          quay-component: quay-mirror
    ports:
    - protocol: TCP
      port: 5432
